fixed mobile overflow issue

--- a/server/styles.sass
+++ b/server/styles.sass
@@ -10,7 +10,10 @@ $noOfSlides: 3
 
 body
   margin: 0
+
+div#root
   overflow-x: hidden
+  position: relative
 
 a
   text-decoration: none
@@ -905,6 +908,14 @@ div.modal-shadow
           font-size: 1.2em
 
 @media screen and (max-width: 440px)
+  div.main
+    div.home
+      div.new-product
+        div.title
+          div.wrapper
+            span
+              font-size: 0.7em
+
   footer
     flex-direction: column-reverse
 
